# bilibili-tag-group

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  start.bat  start.ps1  stop.bat  stop.ps1
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_cache_table.py  a1b2c3d4e5f6_add_tag_sync_configs_table.py  b2c3d4e5f6a7_add_sync_tasks_and_creator_last_synced.py  ba209162b44d_add_avatar_url_to_creators.py  c3d4e5f6a7b8_replace_watched_with_status_column.py  d4e5f6a7b8c9_add_video_count_to_creators.py
app/: README.md  config.py  database.py  dependencies.py  logging_config.py  main.py  scheduler.py
app/fetcher/: __init__.py  bilibili_fetcher.py  models.py  playwright_fetcher.py  wbi.py
app/models/: __init__.py  cache.py  creator.py  creator_tag.py  sync_log.py  sync_task.py  tag.py  tag_sync_config.py  video.py  video_status.py
app/routers/: creators.py  sync.py  tags.py  videos.py
app/schemas/: __init__.py  _datetime.py  creator.py  sync.py  tag.py  video.py
app/services/: creator_service.py  sync_service.py  tag_service.py  video_service.py
app/store/: __init__.py  repo.py  store.py
app/utils/: time.py
docs/: api.md  docs.md  fetcher-review.md  fetcher.md
docs/superpowers/plans/: 2026-04-18-my-bilibili.md  2026-07-11-syncpage-refactor-plan.md  2026-07-16-async-playwright-fetcher.md  2026-07-22-engineering-refactor.md
docs/superpowers/specs/: 2026-04-18-my-bilibili-design.md  2026-04-26-tag-creation-patch-design.md  2026-07-11-syncpage-refactor-design.md  2026-07-12-video-status-three-state-design.md  2026-07-16-async-playwright-fetcher-design.md  2026-07-22-refactor-design.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BatchImportModal.tsx  CreatorAnchorNav.tsx  CreatorForm.tsx  ImmediateTagsSection.tsx  SyncLogCard.tsx  SyncStatusPanel.tsx  VideoCard.tsx
frontend/src/features/sync/: ImmediateTagsSection.tsx  SyncLogCard.tsx  SyncPage.tsx  SyncProgressBar.tsx  SyncSettingsBanner.tsx  SyncTaskResult.tsx  hooks.ts  index.ts
frontend/src/hooks/: useSync.ts  useTags.ts
frontend/src/pages/: CreatorDetailPage.tsx  CreatorsPage.tsx  SyncPage.tsx  TagsPage.tsx
frontend/src/styles/: index.css
frontend/tests/: CreatorsPage.test.tsx  SyncPage.test.tsx  TagsPage.test.tsx  VideoCard.test.tsx  setup.ts
tests/: conftest.py  test_fetcher.py  test_models.py  test_repo.py  test_routers.py  test_scheduler.py  test_services.py  test_utils_time.py
