[project]
name = "my-bilibili"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic-settings>=2.2,<3.0",
  "apscheduler>=3.10,<4.0",
  "httpx>=0.27,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.2,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-anyio>=0.0.0",
  "respx>=0.21,<1.0",
  "ruff>=0.4,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
