[project]
name = "my-bilibili"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "playwright>=1.48,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.4,<1.0",
    "httpx2",
]
test = [
    "pytest",
    "pytest-playwright",
    "httpx2",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "\u001b[32m%(asctime)s\u001b[0m [\u001b[34m%(levelname)s\u001b[0m] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"